<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/CO2Fragment"
        android:icon="@drawable/ic_carbon_dioxide"
        android:title="@string/bottom_nav_menu_co2" />

    <item
        android:id="@+id/tempFragment"
        android:icon="@drawable/ic_temperature"
        android:title="@string/bottom_nav_menu_temperature" />

    <item android:id="@+id/placeholder"
        android:title=""
        />

    <item
        android:id="@+id/humidityFragment"
        android:icon="@drawable/ic_humidity"
        android:title="@string/bottom_nav_menu_humidity" />
    <item
        android:id="@+id/windowFragment"
        android:icon="@drawable/ic_window"
        android:title="@string/bottom_nav_menu_window" />
</menu>